; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_crlf.c_text_eol_is_crlf.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_crlf.c_text_eol_is_crlf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.crlf_attrs = type { i64, i64 }

@GIT_AUTO_CRLF_TRUE = common dso_local global i64 0, align 8
@GIT_AUTO_CRLF_INPUT = common dso_local global i64 0, align 8
@GIT_EOL_CRLF = common dso_local global i64 0, align 8
@GIT_EOL_UNSET = common dso_local global i64 0, align 8
@GIT_EOL_NATIVE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.crlf_attrs*)* @text_eol_is_crlf to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @text_eol_is_crlf(%struct.crlf_attrs* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.crlf_attrs*, align 8
  store %struct.crlf_attrs* %0, %struct.crlf_attrs** %3, align 8
  %4 = load %struct.crlf_attrs*, %struct.crlf_attrs** %3, align 8
  %5 = getelementptr inbounds %struct.crlf_attrs, %struct.crlf_attrs* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = load i64, i64* @GIT_AUTO_CRLF_TRUE, align 8
  %8 = icmp eq i64 %6, %7
  br i1 %8, label %9, label %10

9:                                                ; preds = %1
  store i32 1, i32* %2, align 4
  br label %37

10:                                               ; preds = %1
  %11 = load %struct.crlf_attrs*, %struct.crlf_attrs** %3, align 8
  %12 = getelementptr inbounds %struct.crlf_attrs, %struct.crlf_attrs* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = load i64, i64* @GIT_AUTO_CRLF_INPUT, align 8
  %15 = icmp eq i64 %13, %14
  br i1 %15, label %16, label %17

16:                                               ; preds = %10
  store i32 0, i32* %2, align 4
  br label %37

17:                                               ; preds = %10
  br label %18

18:                                               ; preds = %17
  %19 = load %struct.crlf_attrs*, %struct.crlf_attrs** %3, align 8
  %20 = getelementptr inbounds %struct.crlf_attrs, %struct.crlf_attrs* %19, i32 0, i32 1
  %21 = load i64, i64* %20, align 8
  %22 = load i64, i64* @GIT_EOL_CRLF, align 8
  %23 = icmp eq i64 %21, %22
  br i1 %23, label %24, label %25

24:                                               ; preds = %18
  store i32 1, i32* %2, align 4
  br label %37

25:                                               ; preds = %18
  %26 = load %struct.crlf_attrs*, %struct.crlf_attrs** %3, align 8
  %27 = getelementptr inbounds %struct.crlf_attrs, %struct.crlf_attrs* %26, i32 0, i32 1
  %28 = load i64, i64* %27, align 8
  %29 = load i64, i64* @GIT_EOL_UNSET, align 8
  %30 = icmp eq i64 %28, %29
  br i1 %30, label %31, label %36

31:                                               ; preds = %25
  %32 = load i64, i64* @GIT_EOL_NATIVE, align 8
  %33 = load i64, i64* @GIT_EOL_CRLF, align 8
  %34 = icmp eq i64 %32, %33
  br i1 %34, label %35, label %36

35:                                               ; preds = %31
  store i32 1, i32* %2, align 4
  br label %37

36:                                               ; preds = %31, %25
  store i32 0, i32* %2, align 4
  br label %37

37:                                               ; preds = %36, %35, %24, %16, %9
  %38 = load i32, i32* %2, align 4
  ret i32 %38
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
